# ores

./: README.md  README_old.md  testfile.txt
Charter/: ORES_WG_Charter.md
Prototyping/: Devices_Integration_Prototyping.md
Reference_Implementation/: 4_HomeGrid_Standardization_Initiative.md  4_Standardization_Initiative_Progress_Plan.md  5_Innovation_AC_Battery.md  Devices_Integration_Prototyping.md  Energy_Router_Prototyping.md  README.md
Reference_Implementation/Application/: README.md  Readme_EMS.md  ores-bat-demo.yaml  ores-cam-demo.yaml  ores_discharge2.yaml
Reference_Implementation/Devices/: README.md
Reference_Implementation/Documents/: LFE_Summit_Panel.pptx
Reference_Implementation/Energy_Router/SMB/dq_control/cpp_imp_ref/test/: CMakeLists.txt  cfg_main.h  data.txt  main.cpp  plot.py
Reference_Implementation/Platform/: Auto_Off_Charge.yaml  Auto_On_Charge.yaml  Platform.md  README.md  Readme_EMS.md  Readme_Safety.md  ores-bat-demo.yaml  ores_charge1.yaml  ores_charge2.yaml  ores_discharge1.yaml
Reference_Implementation/images/: HomeGrid_Standardization_Initiative.pptx  README.md  Schlib-ORES.SchLib  energy_route_roadmap_milestone.pptx  energy_router_#2_hybrid.SchDoc  energy_router_control_plane.SchDoc  energy_router_panel_#1.SchDoc  energy_router_panel_#2.SchDoc  energy_router_panel_#3.SchDoc  progress_milestone.pptx  system_diagram.pptx  system_electric_diagram.SchDoc  system_electric_diagram_#1.SchDoc  system_electric_diagram_#2.SchDoc  system_electric_diagram_#3.SchDoc
Resources/OpenEnerToolSearch/: README.md  (+3 more)
Specification/: ORES_Spec.md
(+51 files in other folders)
